--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
+__pycache__/
+*.py[cod]
+*$py.class
 
-tests/__pycache__/test_scripts.cpython-310-pytest-8.0.0.pyc
-tests/__pycache__/__init__.cpython-310.pyc
-src/__pycache__/visualization.cpython-310.pyc
-src/__pycache__/test_scripts.cpython-310-pytest-8.0.0.pyc
-src/__pycache__/relationship.cpython-310.pyc
-src/__pycache__/parser.cpython-310.pyc
-src/__pycache__/main.cpython-310.pyc
-src/__pycache__/file_parser.cpython-310.pyc
-src/__pycache__/__init__.cpython-310.pyc
+# pytest cache
+pytest_cache/
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.env/
+dist/
+build/
+*.egg-info/
+*.egg
+
+# IDEs
+.vscode/
+.idea/
+
+# Compiled Python files
+*.pyc
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
